--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="songlist">
-            <h1 class="songlisttext">Anirudh Ravichander</h1>
+            <h1 class="songlisttext">Best of Anirudh Ravichander</h1>
             <div>
                 <div class="songItem"><span class="songName">1. Badass - Leo</span><button><img src="circle-play-solid.svg" alt="play" class="playListPlay" id="0"></button></div> 
                 <div class="songItem"><span class="songName">2. Naa-Ready - Leo </span><button><img src="circle-play-solid.svg" alt="play" class="playListPlay" id="1"></button></div>
